--- a/WorkoutTrainer/app/src/main/res/layout/activity_exercise.xml
+++ b/WorkoutTrainer/app/src/main/res/layout/activity_exercise.xml
@@ -18,27 +18,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageSearch"
-        android:id="@+id/imageBody" />
+        android:id="@+id/imageBodyFront" />
     <TextView
         android:text="Chest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginStart="60dp"
-        android:layout_alignTop="@+id/imageBody"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="110dp"
-        android:id="@+id/textView" />
+        android:layout_marginLeft="35dp"
+        android:layout_marginStart="35dp"
+        android:id="@+id/txtChest"
+        android:layout_above="@+id/textView"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2"
+        android:layout_marginBottom="50dp" />
     <TextView
         android:text="Triceps"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2" />
     <TextView
         android:text="Biceps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/"
         android:layout_toLeftOf="@+id/imageSearch"
         android:layout_toStartOf="@+id/imageSearch"
         android:layout_marginRight="44dp"
@@ -49,5 +50,6 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_alignRight="@+id/textView"
-        android:layout_alignEnd="@+id/textView" />
+        android:layout_alignEnd="@+id/textView"
+        android:id="@+id/textView" />
 </RelativeLayout>
